@@ -10,12 +10,10 @@ nobase_dist_pkgdata_DATA += \
 
 if ENABLE_MTALPHA
 
-nobase_pkglib_DATA += mtalpha-sim/slrt.o
+nobase_pkglib_DATA += \
+	mtalpha-sim/slrt.o \
+	mtalpha-sim/libslc.a
 
-nobase_pkglib_LIBRARIES += mtalpha-sim/libslc.a
-
-
-mtalpha_sim_libslc_a_SOURCES = 
 mtalpha_sim_libslc_a_CONTENTS = \
 	mtalpha-sim/callgate.o 
 
@@ -34,9 +32,10 @@ mtalpha-sim/slrt.o: $(srcdir)/mtalpha-sim/slrt.s
 	$(AM_V_at)$(MKDIR_P) mtalpha-sim
 	$(slc_verbose)$(SLC_MTALPHA) -c -o $@ $<
 
-endif
-
 CLEANFILES += \
 	mtalpha-sim/callgate.o \
 	mtalpha-sim/slrt.o \
 	mtalpha-sim/libslc.a
+
+endif
+
