@@ -1,3 +1,13 @@
+2009-07-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Fix linking against `mtalpha-sim/libslc.a' after the toolchain is
+	installed.
+	
+	* tools/lib/mtalpha.mk: Pull libslc.a out of pkgdata_LIBRARIES,
+	because otherwise Automake causes the host's "ranlib" utility to
+	be run on the archive during installation. Use the DATA target
+	instead.
+
 2009-07-18  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Sanitize (more).
